k8s/apps/kraken-config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kraken-config
  labels:
    app: kraken-config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kraken-config
  template:
    metadata:
      labels:
        app: kraken-config
        sidecar.istio.io/inject: "true" # Ensure Istio sidecar is injected
    spec:
      containers:
      - name: kraken-config
        image: niteesh20/myapp-kraken-config:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
