k8s/apps/kraken-config/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kraken-config
spec:
  gateways:
    - istio-system/main-gateway
  hosts:
    - mykraken-config # Internal host if accessed via Krakend or Istio Mesh
  http:
    - route:
      - destination:
          host: kraken-config
          port:
            number: 5000
